--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head> <title>Блог Самойлова Владимира</title></head>
 
  <body>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="autoplay" allow="accelerometer; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <center><iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&enablejsapi=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen"></iframe></center>
 
  </body>
 
